--- a/front/pages/gm/dir-version.html
+++ b/front/pages/gm/dir-version.html
@@ -144,7 +144,7 @@
       //监听提交
       form.on('submit(add)', function(data){
         let param = {
-          idStr: zoneSelect.getValue('valueStr'),
+          idsStr: zoneSelect.getValue('valueStr'),
           sClientVersion: data.field.sClientVersion,
           sForceUpdateVersion: data.field.sForceUpdateVersion,
           sAndClientVersion: data.field.sAndClientVersion,
