--- a/front/pages/gm/gm.html
+++ b/front/pages/gm/gm.html
@@ -21,10 +21,10 @@
       </div>
     </div>
     <div class="layui-form-item" style="margin:0px">
-      <textarea name="cmd" placeholder="help" lay-verify="required" lay-verType="tips" class="layui-textarea" rows="5"></textarea>
+      <textarea name="cmd" lay-verify="required" lay-verType="tips" class="layui-textarea" rows="5">help</textarea>
     </div>
     <div class="layui-form-item" style="margin:0px">
-      <textarea name="result" class="layui-textarea" rows="25" disabled></textarea>
+      <textarea name="result" class="layui-textarea" rows="30" disabled></textarea>
     </div>
   </form>
 </div>
