--- a/front/pages/gm/channel.html
+++ b/front/pages/gm/channel.html
@@ -4,16 +4,17 @@
 	<meta charset="UTF-8">
 	<title>渠道管理</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="../../css/oksub.css">
-	<script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
+	<link rel="stylesheet" href="/css/oksub.css">
+	<script type="text/javascript" src="/lib/loading/okLoading.js"></script>
 </head>
 <body>
 <div class="ok-body">
 	<table id="tableId" lay-filter="tableFilter"></table>
 </div>
 <!--js逻辑-->
-<script src="../../lib/layui/layui.js"></script>
+<script src="/lib/layui/layui.js"></script>
 <script>
+  var editdata;
 	layui.use(["element", "table", "okLayer", "okUtils"], function () {
 		let table = layui.table;
 		let okLayer = layui.okLayer;
@@ -22,13 +23,10 @@
 
 		let channelTable = table.render({
 			elem: "#tableId",
-            data: [
-                {"sChannel": 1, "sAddress": '11', "sRes": 'http://192.168.0.130/local_doc/and/'}
-                ,{"sChannel": 2, "sAddress": '11', "sRes": 'http://192.168.0.130/local_doc/ios/'}
-            ],
-            text: {
-                none: '暂无相关数据',
-            },
+      url: '/api/gm/channel/list',
+      text: {
+        none: '暂无相关数据',
+      },
 			limit: 10,
 			page: true,
 			toolbar: "#toolbarTpl",
@@ -39,6 +37,12 @@
 				{field: "sRes", title: "res更新地址"},
 				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
 			]],
+      parseData: function(res) {
+        for (i = 0; i < res.data.length; ++i) {
+          res.data[i].id = res.data[i].sChannel;
+        }
+        return res;
+      }
 		});
 
 		table.on("toolbar(tableFilter)", function (obj) {
@@ -56,6 +60,7 @@
 			let data = obj.data;
 			switch (obj.event) {
 				case "edit":
+          editdata = data;
 					edit(data.sChannel);
 					break;
 				case "del":
@@ -75,7 +80,7 @@
 				layer.close(index);
 				let idsStr = okUtils.tableBatchCheck(table);
 				if (idsStr) {
-					okUtils.ajax("/gm/channel/deleteChannel", "delete", {idsStr: idsStr}, true).done(function (response) {
+					okUtils.ajax("/api/gm/channel/del", "post", {idsStr: idsStr}, true).done(function (response) {
 						okUtils.tableSuccessMsg(response.msg);
 					}).fail(function (error) {
 						console.log(error)
@@ -85,14 +90,14 @@
 		}
 
 		function edit(id) {
-			okLayer.open("编辑渠道", "dir-edit.html?id=" + id, "90%", "90%", null, function () {
-				dirTable.reload();
+			okLayer.open("编辑渠道", "channel-edit.html", "90%", "90%", null, function () {
+				channelTable.reload();
 			})
 		}
 
 		function del(id) {
 			okLayer.confirm("确定要删除吗？", function () {
-				okUtils.ajax("/gm/dir/deleteDir", "delete", {idsStr: id}, true).done(function (response) {
+				okUtils.ajax("/api/gm/channel/del", "post", {idsStr: id}, true).done(function (response) {
 					okUtils.tableSuccessMsg(response.msg);
 				}).fail(function (error) {
 					console.log(error)
