--- a/pages/gm/bulletin.html
+++ b/pages/gm/bulletin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>渠道管理</title>
+	<title>公告管理</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="../../css/oksub.css">
 	<script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
@@ -20,25 +20,47 @@
 		let okUtils = layui.okUtils;
 		okLoading.close();
 
-		let channelTable = table.render({
-			elem: "#tableId",
-            data: [
-                {"sChannel": 1, "sAddress": '11', "sRes": 'http://192.168.0.130/local_doc/and/'}
-                ,{"sChannel": 2, "sAddress": '11', "sRes": 'http://192.168.0.130/local_doc/ios/'}
-            ],
-            text: {
-                none: '暂无相关数据',
-            },
-			limit: 10,
-			page: true,
-			toolbar: "#toolbarTpl",
-			cols: [[
-				{type: "checkbox", title: "序号", fixed: 'left'},
-				{field: "sChannel", title: "渠道", width: 90, fixed: 'left'},
-				{field: "sAddress", title: "exe更新地址"},
-				{field: "sRes", title: "res更新地址"},
-				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
-			]],
+		let bulletinTable = table.render({
+		elem: "#tableId",
+    data: [
+      {"iId": 1, "sTitle": "公告", "sContent": "欢迎来到aqua", "iBeginTime": 1588925071, "iEndTime": 1588925072, "iIsDisplay":1, "iStatus": 3}
+    ],
+    text: {
+      none: '暂无相关数据',
+    },
+		limit: 10,
+		page: true,
+		toolbar: "#toolbarTpl",
+		cols: [[
+			{type: "checkbox", title: "序号", fixed: 'left'},
+			{field: "iId", title: "ID", width: 90, fixed: 'left'},
+			{field: "sTitle", title: "标题", align: "center"},
+			{field: "sContent", title: "内容"},
+			{field: "iBeginTime", title: "开始时间", align: "center", templet: function(d) {
+        return okUtils.dateFormat(new Date(d.iEndTime*1000), 'yyyy-MM-dd hh:mm:ss');
+			}},
+			{field: "iEndTime", title: "结束时间", align: "center", templet: function(d) {
+        if (d.iEndTime < d.iBeginTime) {
+          return '结束时间不能小于开始时间';
+        }
+        return okUtils.dateFormat(new Date(d.iEndTime*1000), 'yyyy-MM-dd hh:mm:ss');
+			}},
+			{field: "iIsDisplay", title: "是否显示", width: 90, align:"center", templet: function(d) {
+		  	return d.iIsDisplay == 1 ? '是' : '否';
+      }},
+			{field: "iStatus", title: "状态", width: 90, align: "center", templet: function(d) {
+        var ret = '';
+        switch (d.iStatus) {
+        case 1: ret = '未开启';break;
+        case 2: ret = '开启中';break;
+        case 3: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">已结束</span>';break;
+        default:
+            ret = '未知状态';
+        }
+        return ret;
+      }},
+			{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
+		]],
 		});
 
 		table.on("toolbar(tableFilter)", function (obj) {
@@ -56,17 +78,17 @@
 			let data = obj.data;
 			switch (obj.event) {
 				case "edit":
-					edit(data.sChannel);
+					edit(data.sbulletin);
 					break;
 				case "del":
-					del(data.sChannel);
+					del(data.sbulletin);
 					break;
 			}
 		});
 
 		function add() {
-			okLayer.open("添加渠道", "channel-add.html", "90%", "90%", null, function () {
-				channelTable.reload();
+			okLayer.open("添加渠道", "bulletin-add.html", "90%", "90%", null, function () {
+				bulletinTable.reload();
 			})
 		}
 
@@ -75,7 +97,7 @@
 				layer.close(index);
 				let idsStr = okUtils.tableBatchCheck(table);
 				if (idsStr) {
-					okUtils.ajax("/gm/channel/deleteChannel", "delete", {idsStr: idsStr}, true).done(function (response) {
+					okUtils.ajax("/gm/bulletin/deleteBulletin", "delete", {idsStr: idsStr}, true).done(function (response) {
 						okUtils.tableSuccessMsg(response.msg);
 					}).fail(function (error) {
 						console.log(error)
@@ -92,7 +114,7 @@
 
 		function del(id) {
 			okLayer.confirm("确定要删除吗？", function () {
-				okUtils.ajax("/gm/dir/deleteChannel", "delete", {idsStr: id}, true).done(function (response) {
+				okUtils.ajax("/gm/dir/deleteBulletin", "delete", {idsStr: id}, true).done(function (response) {
 					okUtils.tableSuccessMsg(response.msg);
 				}).fail(function (error) {
 					console.log(error)
