--- a/pages/gm/send-mail.html
+++ b/pages/gm/send-mail.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>渠道管理</title>
+	<title>发送邮件</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="../../css/oksub.css">
 	<script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
@@ -20,25 +20,49 @@
 		let okUtils = layui.okUtils;
 		okLoading.close();
 
-		let channelTable = table.render({
-			elem: "#tableId",
-            data: [
-                {"sChannel": 1, "sAddress": '11', "sRes": 'http://192.168.0.130/local_doc/and/'}
-                ,{"sChannel": 2, "sAddress": '11', "sRes": 'http://192.168.0.130/local_doc/ios/'}
-            ],
-            text: {
-                none: '暂无相关数据',
-            },
-			limit: 10,
-			page: true,
-			toolbar: "#toolbarTpl",
-			cols: [[
-				{type: "checkbox", title: "序号", fixed: 'left'},
-				{field: "sChannel", title: "渠道", width: 90, fixed: 'left'},
-				{field: "sAddress", title: "exe更新地址"},
-				{field: "sRes", title: "res更新地址"},
-				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
-			]],
+		let mailTable = table.render({
+		elem: "#tableId",
+		data: [
+		{
+			"iId": 1,
+			"iTime": 3,
+			"sSendName":"x",
+			"sTitle": "skl",
+			"sContent": "发现bug请及时录入git，请关注git任务单的变化，按优先级处理",
+			"iAccount": "1111",
+			"iSendServer": 3,
+			"iReceiveServer": 4,
+			"iStatus": 2,
+		},
+		],
+		text: {
+			none: '暂无相关数据',
+		},
+		limit: 10,
+		page: true,
+		toolbar: "#toolbarTpl",
+		cols: [[
+			{type: "checkbox", title: "序号", fixed: 'left'},
+			{field: "iId", title: "ID", width: 90, fixed: 'left'},
+			{field: "iTime", title: "时间", width: 90},
+			{field: "sSendName", title: "发件人", width: 90},
+			{field: "sTitel", title: "标题"},
+			{field: "sContent", title: "内容"},
+			{field: "iAccount", title: "接收玩家", width: 90},
+			{field: "iSendServer", title: "发送服务器", width: 90},
+			{field: "iReceiveServer", title: "已接收服务器", width: 90},
+			{field: "iStatus", title: "状态", width: 90, align: "center", fixed: 'right', templet: function(d) {
+				var ret = '';
+				switch (d.iStatus) {
+				case 1: ret = '成功';break;
+				case 2: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">失败</span>';break;
+				default:
+						ret = '未知状态';
+				}
+				return ret;
+			}},
+			{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
+		]],
 		});
 
 		table.on("toolbar(tableFilter)", function (obj) {
@@ -55,18 +79,15 @@
 		table.on("tool(tableFilter)", function (obj) {
 			let data = obj.data;
 			switch (obj.event) {
-				case "edit":
-					edit(data.sChannel);
-					break;
 				case "del":
-					del(data.sChannel);
+					del(data.smail);
 					break;
 			}
 		});
 
 		function add() {
-			okLayer.open("添加渠道", "channel-add.html", "90%", "90%", null, function () {
-				channelTable.reload();
+			okLayer.open("添加渠道", "mail-add.html", "90%", "90%", null, function () {
+				mailTable.reload();
 			})
 		}
 
@@ -75,7 +96,7 @@
 				layer.close(index);
 				let idsStr = okUtils.tableBatchCheck(table);
 				if (idsStr) {
-					okUtils.ajax("/gm/channel/deleteChannel", "delete", {idsStr: idsStr}, true).done(function (response) {
+					okUtils.ajax("/gm/mail/deleteMail", "delete", {idsStr: idsStr}, true).done(function (response) {
 						okUtils.tableSuccessMsg(response.msg);
 					}).fail(function (error) {
 						console.log(error)
@@ -84,15 +105,9 @@
 			});
 		}
 
-		function edit(id) {
-			okLayer.open("编辑渠道", "dir-edit.html?id=" + id, "90%", "90%", null, function () {
-				dirTable.reload();
-			})
-		}
-
 		function del(id) {
 			okLayer.confirm("确定要删除吗？", function () {
-				okUtils.ajax("/gm/dir/deleteChannel", "delete", {idsStr: id}, true).done(function (response) {
+				okUtils.ajax("/gm/dir/deleteMail", "delete", {idsStr: id}, true).done(function (response) {
 					okUtils.tableSuccessMsg(response.msg);
 				}).fail(function (error) {
 					console.log(error)
@@ -110,7 +125,6 @@
 </script>
 
 <script type="text/html" id="operationTpl">
-	<a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
 	<a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
 </script>
 </body>
