--- a/front/pages/gm/notice.html
+++ b/front/pages/gm/notice.html
@@ -1,171 +1,186 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>跑马灯</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="../../css/oksub.css">
-	<script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
+  <meta charset="UTF-8">
+  <title>跑马灯</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="../../css/oksub.css">
+  <script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
 </head>
+
 <body>
-<div class="ok-body">
-	<table id="tableId" lay-filter="tableFilter"></table>
-</div>
-<!--js逻辑-->
-<script src="../../lib/layui/layui.js"></script>
-<script>
-	layui.use(["element", "table", "okLayer", "okUtils"], function () {
-		let table = layui.table;
-		let okLayer = layui.okLayer;
-		let okUtils = layui.okUtils;
-		okLoading.close();
+  <div class="ok-body">
+    <table id="tableId" lay-filter="tableFilter"></table>
+  </div>
+  <!--js逻辑-->
+  <script src="../../lib/layui/layui.js"></script>
+  <script>
+    layui.use(["element", "table", "okLayer", "okUtils"], function () {
+      let table = layui.table;
+      let okLayer = layui.okLayer;
+      let okUtils = layui.okUtils;
+      okLoading.close();
 
-		let noticeTable = table.render({
-		elem: "#tableId",
-		data: [
-		{"iId": 1,
-			"iNoticeType": 3,
-			"sContent": "发现bug请及时录入git，请关注git任务单的变化，按优先级处理",
-			"iBeginTime": 1588925071,
-			"iEndTime": 1588925070,
-			"iDisplayType": 1,
-			"iDisplayInterval": 1000,
-			"iDisplayTimes": 999,
-			"iStatus": 3,
-			"sZond": "1234",
-			"iMaintainTime": 10}
-		],
-		text: {
-			none: '暂无相关数据',
-		},
-		limit: 10,
-		page: true,
-		toolbar: "#toolbarTpl",
-		cols: [[
-			{type: "checkbox", title: "序号", fixed: 'left'},
-			{field: "iId", title: "ID", width: 90, fixed: 'left'},
-			{field: "iNoticeType", title: "公告类型", width: 90, align: "center", templet: function(d) {
-				var ret = '';
-				switch (d.iNoticeType) {
-				case 1: ret = '走马灯';break;
-				case 2: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">停服公告</span>';break;
-				case 3: ret = '公告';break;
-				default:
-						ret = '未知状态';
-				}
-				return ret;
-			}},
-			{field: "sContent", title: "内容"},
-			{field: "iBeginTime", title: "开始时间", align: "center", templet: function(d) {
-				return okUtils.dateFormat(new Date(d.iEndTime*1000), 'yyyy-MM-dd hh:mm:ss');
-			}},
-			{field: "iEndTime", title: "结束时间", align: "center", templet: function(d) {
-			if (d.iEndTime < d.iBeginTime) {
-					return '结束时间不能小于开始时间';
-				}
-				return okUtils.dateFormat(new Date(d.iEndTime*1000), 'yyyy-MM-dd hh:mm:ss');
-			}},
-			{field: "iDisplayType", title: "显示位置", width: 90, align:"center", templet: function(d) {
-				var ret = '';
-				switch (d.iDisplayType) {
-				case 1: ret = '全界面';break;
-				case 2: ret = '主界面';break;
-				default:
-						ret = '未知';
-				}
-				return ret;
-			}},
-			{field: "iDisplayInterval", title: "显示间隔（秒）", width: 90, align:"center"},
-			{field: "iDisplayTimes", title: "显示次数", width: 90, align:"center"},
-			{field: "iStatus", title: "状态", width: 90, align: "center", templet: function(d) {
-				var ret = '';
-				switch (d.iStatus) {
-				case 1: ret = '未开启';break;
-				case 2: ret = '开启中';break;
-				case 3: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">已结束</span>';break;
-				default:
-						ret = '未知状态';
-				}
-				return ret;
-			}},
-			// TODO 需要修改
-			{field: "sZond", title: "分区", align: "center"},
-			{field: "iMaintainTime", title: "维护时间（分钟）", width: 90, align: "justify"},
-			{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
-		]],
-		});
+      let noticeTable = table.render({
+        elem: "#tableId",
+        data: [
+          {
+            "iId": 1,
+            "iNoticeType": 3,
+            "sContent": "发现bug请及时录入git，请关注git任务单的变化，按优先级处理",
+            "iBeginTime": 1588925071,
+            "iEndTime": 1588925070,
+            "iDisplayType": 1,
+            "iDisplayInterval": 1000,
+            "iDisplayTimes": 999,
+            "iStatus": 3,
+            "sZond": "1234",
+            "iMaintainTime": 10
+          }
+        ],
+        text: {
+          none: '暂无相关数据',
+        },
+        limit: 10,
+        page: true,
+        toolbar: "#toolbarTpl",
+        cols: [[
+          { type: "checkbox", title: "序号", fixed: 'left' },
+          { field: "iId", title: "ID", width: 90, fixed: 'left' },
+          {
+            field: "iNoticeType", title: "公告类型", width: 90, align: "center", templet: function (d) {
+              var ret = '';
+              switch (d.iNoticeType) {
+                case 1: ret = '走马灯'; break;
+                case 2: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">停服公告</span>'; break;
+                case 3: ret = '公告'; break;
+                default:
+                  ret = '未知状态';
+              }
+              return ret;
+            }
+          },
+          { field: "sContent", title: "内容" },
+          {
+            field: "iBeginTime", title: "开始时间", align: "center", templet: function (d) {
+              return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
+            }
+          },
+          {
+            field: "iEndTime", title: "结束时间", align: "center", templet: function (d) {
+              if (d.iEndTime < d.iBeginTime) {
+                return '结束时间不能小于开始时间';
+              }
+              return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
+            }
+          },
+          {
+            field: "iDisplayType", title: "显示位置", width: 90, align: "center", templet: function (d) {
+              var ret = '';
+              switch (d.iDisplayType) {
+                case 1: ret = '全界面'; break;
+                case 2: ret = '主界面'; break;
+                default:
+                  ret = '未知';
+              }
+              return ret;
+            }
+          },
+          { field: "iDisplayInterval", title: "显示间隔（秒）", width: 90, align: "center" },
+          { field: "iDisplayTimes", title: "显示次数", width: 90, align: "center" },
+          {
+            field: "iStatus", title: "状态", width: 90, align: "center", templet: function (d) {
+              var ret = '';
+              switch (d.iStatus) {
+                case 1: ret = '未开启'; break;
+                case 2: ret = '开启中'; break;
+                case 3: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">已结束</span>'; break;
+                default:
+                  ret = '未知状态';
+              }
+              return ret;
+            }
+          },
+          // TODO 需要修改
+          { field: "sZond", title: "分区", align: "center" },
+          { field: "iMaintainTime", title: "维护时间（分钟）", width: 90, align: "justify" },
+          { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
+        ]],
+      });
 
-		table.on("toolbar(tableFilter)", function (obj) {
-			switch (obj.event) {
-				case "add":
-					add();
-					break;
-				case "batchDel":
-					batchDel();
-					break;
-			}
-		});
+      table.on("toolbar(tableFilter)", function (obj) {
+        switch (obj.event) {
+          case "add":
+            add();
+            break;
+          case "batchDel":
+            batchDel();
+            break;
+        }
+      });
 
-		table.on("tool(tableFilter)", function (obj) {
-			let data = obj.data;
-			switch (obj.event) {
-				case "edit":
-					edit(data.snotice);
-					break;
-				case "del":
-					del(data.snotice);
-					break;
-			}
-		});
+      table.on("tool(tableFilter)", function (obj) {
+        let data = obj.data;
+        switch (obj.event) {
+          case "edit":
+            edit(data.snotice);
+            break;
+          case "del":
+            del(data.snotice);
+            break;
+        }
+      });
 
-		function add() {
-			okLayer.open("添加渠道", "notice-add.html", "90%", "90%", null, function () {
-				noticeTable.reload();
-			})
-		}
+      function add() {
+        okLayer.open("添加渠道", "notice-add.html", "90%", "90%", null, function () {
+          noticeTable.reload();
+        })
+      }
 
-		function batchDel() {
-			okLayer.confirm("确定要批量删除吗？", function (index) {
-				layer.close(index);
-				let idsStr = okUtils.tableBatchCheck(table);
-				if (idsStr) {
-					okUtils.ajax("/gm/notice/deleteNotice", "delete", {idsStr: idsStr}, true).done(function (response) {
-						okUtils.tableSuccessMsg(response.msg);
-					}).fail(function (error) {
-						console.log(error)
-					});
-				}
-			});
-		}
+      function batchDel() {
+        okLayer.confirm("确定要批量删除吗？", function (index) {
+          layer.close(index);
+          let idsStr = okUtils.tableBatchCheck(table);
+          if (idsStr) {
+            okUtils.ajax("/gm/notice/deleteNotice", "delete", { idsStr: idsStr }, true).done(function (response) {
+              okUtils.tableSuccessMsg(response.msg);
+            }).fail(function (error) {
+              console.log(error)
+            });
+          }
+        });
+      }
 
-		function edit(id) {
-			okLayer.open("编辑渠道", "dir-edit.html?id=" + id, "90%", "90%", null, function () {
-				dirTable.reload();
-			})
-		}
+      function edit(id) {
+        okLayer.open("编辑渠道", "dir-edit.html?id=" + id, "90%", "90%", null, function () {
+          dirTable.reload();
+        })
+      }
 
-		function del(id) {
-			okLayer.confirm("确定要删除吗？", function () {
-				okUtils.ajax("/gm/dir/deletenotice", "delete", {idsStr: id}, true).done(function (response) {
-					okUtils.tableSuccessMsg(response.msg);
-				}).fail(function (error) {
-					console.log(error)
-				});
-			})
-		}
-	})
+      function del(id) {
+        okLayer.confirm("确定要删除吗？", function () {
+          okUtils.ajax("/gm/dir/deletenotice", "delete", { idsStr: id }, true).done(function (response) {
+            okUtils.tableSuccessMsg(response.msg);
+          }).fail(function (error) {
+            console.log(error)
+          });
+        })
+      }
+    })
+  </script>
+  <!-- 头工具栏模板 -->
+  <script type="text/html" id="toolbarTpl">
+  <div class="layui-btn-container">
+    <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
+    <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
+  </div>
 </script>
-<!-- 头工具栏模板 -->
-<script type="text/html" id="toolbarTpl">
-	<div class="layui-btn-container">
-		<div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
-		<div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
-	</div>
-</script>
 
-<script type="text/html" id="operationTpl">
-	<a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
-	<a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
+  <script type="text/html" id="operationTpl">
+  <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
+  <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
 </script>
 </body>
+
 </html>
