--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -1,100 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>经分后台</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="css/okadmin.css">
-	<link rel="stylesheet" href="lib/loading/okLoading.css" />
+  <meta charset="utf-8">
+  <title>经分后台</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="css/okadmin.css">
+  <link rel="stylesheet" href="lib/loading/okLoading.css" />
 </head>
+
 <body class="layui-layout-body">
-    <div class="layui-layout layui-layout-admin okadmin blue_theme">
-        <!--头部导航-->
-        <div class="layui-header okadmin-header">
-            <ul class="layui-nav layui-layout-left">
-                <li class="layui-nav-item">
-                    <a class="ok-menu ok-show-menu" href="javascript:" title="菜单切换">
-                        <i class="layui-icon layui-icon-shrink-right"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul class="layui-nav layui-layout-right">
-                <li class="layui-nav-item">
-                    <a class="ok-refresh" href="javascript:" title="刷新">
-                        <i class="layui-icon layui-icon-refresh-3"></i>
-                    </a>
-                </li>
-                <li class="no-line layui-nav-item">
-                    <a href="javascript:">
-                        <img src="images/avatar.png" class="layui-nav-img">
-                        <label id="uname">bobi</label>
-                    </a>
-                    <dl id="userInfo" class="layui-nav-child">
-                        <dd><a lay-id="u-3" href="javascript:" data-url="system/user-pwd.html">安全设置</a></dd>
-                        <dd>
-                            <hr/>
-                        </dd>
-                        <dd><a href="javascript:void(0)" id="logout">退出登录</a></dd>
-                    </dl>
-                </li>
-            </ul>
-        </div>
-        <!--遮罩层-->
-        <div class="ok-make"></div>
-        <!--左侧导航区域-->
-        <div class="layui-side layui-side-menu okadmin-bg-20222A ok-left">
-            <div class="layui-side-scroll okadmin-side">
-                <div class="okadmin-logo">三国内网</div>
-                <!--左侧导航菜单-->
-                <ul id="navBar" class="layui-nav okadmin-nav okadmin-bg-20222A layui-nav-tree">
-                </ul>
-            </div>
-        </div>
-
-        <!-- 内容主体区域 -->
-        <div class="content-body">
-            <div class="layui-tab ok-tab" lay-filter="ok-tab" lay-allowClose="true" lay-unauto>
-                <div data-id="left" id="okLeftMove"
-                     class="ok-icon ok-icon-back okadmin-tabs-control move-left okNavMove"></div>
-                <div data-id="right" id="okRightMove"
-                     class="ok-icon ok-icon-right okadmin-tabs-control move-right okNavMove"></div>
-                <div class="layui-icon okadmin-tabs-control ok-right-nav-menu" style="right: 0;">
-                    <ul class="okadmin-tab">
-                        <li class="no-line okadmin-tab-item">
-                            <div class="okadmin-link layui-icon-down" href="javascript:;"></div>
-                            <dl id="tabAction" class="okadmin-tab-child layui-anim-upbit layui-anim">
-                                <dd><a data-num="1" href="javascript:">关闭当前标签页</a></dd>
-                                <dd><a data-num="2" href="javascript:">关闭其他标签页</a></dd>
-                                <dd><a data-num="3" href="javascript:">关闭所有标签页</a></dd>
-                            </dl>
-                        </li>
-                    </ul>
-                </div>
-
-                <ul id="tabTitle" class="layui-tab-title ok-tab-title not-scroll">
-                    <li class="layui-this" lay-id="1" tab="index">
-                        <i class="ok-icon">&#xe654;</i>
-                        <cite is-close=false>控制台</cite>
-                    </li>
-                </ul>
-
-                <div id="tabContent" class="layui-tab-content ok-tab-content">
-                    <div class="layui-tab-item layui-show">
-                        <iframe src='console.html' frameborder="0" scrolling="yes" width="100%" height="100%"></iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--底部信息-->
-        <div class="layui-footer okadmin-text-center">
-        </div>
+  <div class="layui-layout layui-layout-admin okadmin blue_theme">
+    <!--头部导航-->
+    <div class="layui-header okadmin-header">
+      <ul class="layui-nav layui-layout-left">
+        <li class="layui-nav-item">
+          <a class="ok-menu ok-show-menu" href="javascript:" title="菜单切换">
+            <i class="layui-icon layui-icon-shrink-right"></i>
+          </a>
+        </li>
+      </ul>
+      <ul class="layui-nav layui-layout-right">
+        <li class="layui-nav-item">
+          <a class="ok-refresh" href="javascript:" title="刷新">
+            <i class="layui-icon layui-icon-refresh-3"></i>
+          </a>
+        </li>
+        <li class="no-line layui-nav-item">
+          <a href="javascript:">
+            <img src="images/avatar.png" class="layui-nav-img">
+            <label id="uname">bobi</label>
+          </a>
+          <dl id="userInfo" class="layui-nav-child">
+            <dd><a lay-id="u-3" href="javascript:" data-url="system/user-pwd.html">安全设置</a></dd>
+            <dd>
+              <hr />
+            </dd>
+            <dd><a href="javascript:void(0)" id="logout">退出登录</a></dd>
+          </dl>
+        </li>
+      </ul>
     </div>
-    <div class="yy"></div>
-    <!--js逻辑-->
-    <script src="lib/layui/layui.js"></script>
-    <script src="js/okadmin.js"></script>
-	<script type="text/javascript" src="lib/loading/okLoading.js"></script>
+    <!--遮罩层-->
+    <div class="ok-make"></div>
+    <!--左侧导航区域-->
+    <div class="layui-side layui-side-menu okadmin-bg-20222A ok-left">
+      <div class="layui-side-scroll okadmin-side">
+        <div class="okadmin-logo">三国内网</div>
+        <!--左侧导航菜单-->
+        <ul id="navBar" class="layui-nav okadmin-nav okadmin-bg-20222A layui-nav-tree">
+        </ul>
+      </div>
+    </div>
+
+    <!-- 内容主体区域 -->
+    <div class="content-body">
+      <div class="layui-tab ok-tab" lay-filter="ok-tab" lay-allowClose="true" lay-unauto>
+        <div data-id="left" id="okLeftMove" class="ok-icon ok-icon-back okadmin-tabs-control move-left okNavMove"></div>
+        <div data-id="right" id="okRightMove" class="ok-icon ok-icon-right okadmin-tabs-control move-right okNavMove">
+        </div>
+        <div class="layui-icon okadmin-tabs-control ok-right-nav-menu" style="right: 0;">
+          <ul class="okadmin-tab">
+            <li class="no-line okadmin-tab-item">
+              <div class="okadmin-link layui-icon-down" href="javascript:;"></div>
+              <dl id="tabAction" class="okadmin-tab-child layui-anim-upbit layui-anim">
+                <dd><a data-num="1" href="javascript:">关闭当前标签页</a></dd>
+                <dd><a data-num="2" href="javascript:">关闭其他标签页</a></dd>
+                <dd><a data-num="3" href="javascript:">关闭所有标签页</a></dd>
+              </dl>
+            </li>
+          </ul>
+        </div>
+
+        <ul id="tabTitle" class="layui-tab-title ok-tab-title not-scroll">
+          <li class="layui-this" lay-id="1" tab="index">
+            <i class="ok-icon">&#xe654;</i>
+            <cite is-close=false>控制台</cite>
+          </li>
+        </ul>
+
+        <div id="tabContent" class="layui-tab-content ok-tab-content">
+          <div class="layui-tab-item layui-show">
+            <iframe src='console.html' frameborder="0" scrolling="yes" width="100%" height="100%"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--底部信息-->
+    <div class="layui-footer okadmin-text-center">
+    </div>
+  </div>
+  <div class="yy"></div>
+  <!--js逻辑-->
+  <script src="lib/layui/layui.js"></script>
+  <script src="js/okadmin.js"></script>
+  <script type="text/javascript" src="lib/loading/okLoading.js"></script>
 </body>
+
 </html>
