--- a/front/pages/gm/registry.html
+++ b/front/pages/gm/registry.html
@@ -14,7 +14,6 @@
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
 <script>
-  var editdata;
 	layui.use(["element", "table", "okLayer", "okUtils"], function () {
 		let table = layui.table;
 		let okLayer = layui.okLayer;
@@ -39,7 +38,7 @@
 			]],
       parseData: function(res) {
         for (i = 0; i < res.data.length; ++i) {
-          res.data[i].id = res.data[i].sObj+'$'+res.data[i].sDivision;
+          res.data[i].id = res.data[i].sObj+'$'+res.data[i].sDivision+'$'+res.data[i].sEp;
         }
         return res;
       }
@@ -59,10 +58,6 @@
 		table.on("tool(tableFilter)", function (obj) {
 			let data = obj.data;
 			switch (obj.event) {
-				case "edit":
-          editdata = data;
-					edit(data.id);
-					break;
 				case "del":
 					del(data.id);
 					break;
@@ -81,7 +76,7 @@
 				let idsStr = okUtils.tableBatchCheck(table);
 				if (idsStr) {
 					okUtils.ajax("/api/gm/registry/del", "post", {idsStr: idsStr}, true).done(function (response) {
-						okUtils.tableSuccessMsg(response.msg);
+						okUtils.tableSuccessMsg(response.data);
 					}).fail(function (error) {
 						console.log(error)
 					});
@@ -89,16 +84,10 @@
 			});
 		}
 
-		function edit(id) {
-			okLayer.open("编辑registry", "registry-edit.html", "90%", "90%", null, function () {
-				registryTable.reload();
-			})
-		}
-
 		function del(id) {
 			okLayer.confirm("确定要删除吗？", function () {
 				okUtils.ajax("/api/gm/registry/del", "post", {idsStr: id}, true).done(function (response) {
-					okUtils.tableSuccessMsg(response.msg);
+					okUtils.tableSuccessMsg(response.data);
 				}).fail(function (error) {
 					console.log(error)
 				});
@@ -115,7 +104,6 @@
 </script>
 
 <script type="text/html" id="operationTpl">
-	<a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
 	<a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
 </script>
 </body>
