--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -43,9 +43,9 @@
         </div>
       </div>
 
-      <div class="layui-inline">
+      <div class="layui-form-item">
         <label class="layui-form-label">是否手动</label>
-        <div class="layui-input-inline">
+        <div class="layui-input-block">
           <select name="iIsManual">
             <option value="0">否</option>
             <option value="1" selected>是</option>
