--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -14,7 +14,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">标题</label>
         <div class="layui-input-block">
-          <input type="text" name="sTital" placeholder="请输入标题" autocomplete="off" class="layui-input"
+          <input type="text" name="sTitle" placeholder="请输入标题" autocomplete="off" class="layui-input"
             lay-verify="required" lay-verType="tips">
         </div>
       </div>
