--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -30,7 +30,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iBeginTime" autocomplete="off" class="layui-input" lay-verify="required|datatime"
+          <input type="text" name="iBeginTime" autocomplete="off" class="layui-input" lay-verify="required|datetime"
             lay-verType="tips">
         </div>
       </div>
@@ -38,7 +38,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datatime"
+          <input type="text" name="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime"
             lay-verType="tips">
         </div>
       </div>
