--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -30,16 +30,16 @@
       <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iBeginTime" autocomplete="off" class="layui-input" lay-verify="required|datetime"
-            lay-verType="tips">
+          <input type="text" name="iBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
+            lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
       <div class="layui-form-item">
         <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime"
-            lay-verType="tips">
+          <input type="text" name="iEndTime" id="iEndTime" autocomplete="off" class="layui-input"
+            lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
@@ -64,11 +64,19 @@
   </div>
   <script src="/lib/layui/layui.js"></script>
   <script>
-    layui.use(['form', 'okLayer', 'okUtils'], function () {
+    layui.use(['form', 'laydate', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
+      let laydate = layui.laydate;
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
       let $ = layui.jquery;
+
+      laydate.render({
+        elem: "#iBeginTime", type: "datetime", value: new Date(parent.zonedate.iBeginTime * 1000)
+      }, /*);
+      laydate.render({*/{
+          elem: "#iEndTime", type: "datetime", value: new Date(parent.zonedate.iEndTime * 1000)
+        });
 
       $("input[name='sTitle']").val(parent.editdata.sTitle);
       $("input[name='sContent']").val(parent.editdata.sContent);
