--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>编辑公告</title>
+  <title>新增跑马灯</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="/css/oksub.css">
 </head>
@@ -66,10 +66,9 @@
   <script>
     layui.use(['form', 'laydate', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
-      let laydate = layui.laydate;
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
-      let $ = layui.jquery;
+      let laydate = layui.laydate;
 
       laydate.render({
         elem: "#iBeginTime", type: "datetime"
@@ -78,14 +77,9 @@
         elem: "#iEndTime", type: "datetime"
       });
 
-      $("input[name='sTitle']").val(parent.editdata.sTitle);
-      $("input[name='sContent']").val(parent.editdata.sContent);
-      $("input[name='iBeginTime']").val(parent.editdata.iBeginTime);
-      $("input[name='iEndTime']").val(parent.editdata.iEndTime);
-
       //监听提交
       form.on('submit(add)', function (data) {
-        okUtils.ajax("/api/gm/bulletin/update", "post", data.field, true).done(function (response) {
+        okUtils.ajax("/api/gm/notice/add", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
           });
