--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -22,7 +22,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">内容</label>
         <div class="layui-input-block">
-          <textarea name="sContent" placeholder="请输入内容" class="layui-textarea" lay-verify="required"
+          <textarea name="sContent" placeholder="请输入内容" autocomplete="off" class="layui-textarea" lay-verify="required"
             lay-verType="tips"></textarea>
         </div>
       </div>
@@ -30,7 +30,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
+          <input type="text" name="sBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
@@ -38,15 +38,15 @@
       <div class="layui-form-item">
         <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iEndTime" id="iEndTime" autocomplete="off" class="layui-input"
+          <input type="text" name="sEndTime" id="iEndTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">是否手动</label>
+        <label class="layui-form-label">是否显示</label>
         <div class="layui-input-block">
-          <select name="iIsManual">
+          <select name="iDisplay">
             <option value="0">否</option>
             <option value="1" selected>是</option>
           </select>
@@ -79,12 +79,13 @@
       });
 
       $("input[name='sTitle']").val(parent.editdata.sTitle);
-      $("input[name='sContent']").val(parent.editdata.sContent);
-      $("input[name='iBeginTime']").val(parent.editdata.iBeginTime);
-      $("input[name='iEndTime']").val(parent.editdata.iEndTime);
+      $("textarea[name='sContent']").val(parent.editdata.sContent);
+      $("input[name='sBeginTime']").val(parent.editdata.sBeginTime);
+      $("input[name='sEndTime']").val(parent.editdata.sEndTime);
 
       //监听提交
       form.on('submit(add)', function (data) {
+        data.field.iBulletinId = parent.editdata.iBulletinId;
         okUtils.ajax("/api/gm/bulletin/update", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
